main and single page

--- a/src/Main.css
+++ b/src/Main.css
@@ -1,6 +1,8 @@
 .container-fluid{
     background-image: url('../src/img/mainbgd.jpg');
-    height: 900px;
+    padding: 20px 0px;
     background-position: center;
     background-size: cover;
+    height: 100%;;
+   
 }
