--- a/src/home.css
+++ b/src/home.css
@@ -10,7 +10,9 @@ ul{
     border:1px solid white;
 }
 
-ul li{
-    /* border:1px solid white; */
+#loader{
+    
+  margin-top:10%;
+  margin-bottom: 10%;
 }
 
