--- a/src/partials/header.css
+++ b/src/partials/header.css
@@ -1,6 +1,6 @@
-.logo{
-    width: 70px;
-    height: 70px;
+.logo  img{
+   
+    height: 100px;
     margin-left: 25px;
     
 }
@@ -8,13 +8,13 @@
 .navbar{
     padding: 50px 0px;
     background: linear-gradient(#E93E48, #C12B38);
+    border-bottom: 4px solid black;
 }
 
 
-nav p{
-    margin: 0 auto;
+.header{
     font-size: 2rem;
     text-shadow: 2px 2px black;
     color:white;
-   
+    width: 55%;
 }
